[package]
name = "string_to_num"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.5"
num = "0.4.0"
log = "0.4.17"
num-format = "0.4.0"
thousands = "0.2.0"

[dev-dependencies]
env_logger = "0.9.0"
ctor = "0.1.22"