[package]
name = "num_string"
version = "0.1.0"
edition = "2021"
author = ["Romain FRIOT <friotromain@gmail.com>"]
license = "MIT"
description = "A simple crate to perform conversion between string and number"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.5"
num = "0.4.0"
log = "0.4.17"
thousands = "0.2.0"

[dev-dependencies]
env_logger = "0.9.0"
ctor = "0.1.22"